reports/2015/css/_fellow-spend.scss
.container-money {
    .container-fellow-spend {
	width: 100%;
	//border-top: 3px dotted $black;
	//border-bottom: 3px dotted $black;
	overflow: hidden;
	margin-top: 40px;
	margin-bottom: 60px;
	
	.container-fellow-spend-inner {
	    white-space: nowrap;
	    width: 1000px;
	    margin: auto;
	    position: relative;
	    
	    .fellow-spend-entry {
		height: 450px;
		width: 100%;
		margin: 25px 0;
		display: inline-block;
		overflow: hidden;
		transition: all 0.5s;
		position: relative;
		
		&.fellow-spend-entry-active {
		    margin-left: 0;
		}
		
		&.fellow-spend-entry-previous {
		    margin-left: -1040px;
		    margin-right: 40px;
		    opacity: 0;
		}
		
		&.fellow-spend-entry-next {
		    margin-left: 40px;
		    margin-right: -1040px;
		    opacity: 0;
		}
		
		h4 {
		    margin-top: 0;
		}
		
		.fellow-spend-entry-left,  .fellow-spend-entry-right {
		    display: inline-block;
		    width: 500px;
		    vertical-align: top;
		}
		
		.fellow-spend-entry-left {
		    .fellow-spend-links {
			margin-top: 40px;
			
			& > a {
			    margin: 4px 0;
			    display: inline-block;
			    color: $black;
			    
			    &:hover {
				color: $green;
			    }
			}
		    }
		}
		
		.fellow-spend-entry-right {
		    text-align: right;
		    padding-right: 5px;
		    
		    .fellow-spend-contributions {
			font-size: 16px;
			line-height: 24px;
			margin-bottom: 30px;
		    }
		    
		    .fellow-spend-item {
			width: (125px+70px);
			margin-left: (500px-125px-70px-30px);
			margin-top: 10px;
			margin-bottom: 10px;
			text-align: left;
			
			.fellow-spend-item-amount {
			    font-size: 20px;
			}
		    }
		    
		    .fellow-spend-total {
			font-size: 20px;
			padding: 5px 0;
			margin-top: 10px;
			margin-right: 30px;
			
			.fellow-spend-total-amount {
			    display: inline-block;
			    border-top: 2px solid $black;
			    border-bottom: 2px solid $black;
			    margin-left: 20px;
			    padding: 5px 5px;
			    width: 125px;
			    text-align: left;
			}
		    }
		}
	    }
	}
	
	$arrowsize: 50px;
	$arrowsymbol: 15px;
	$dotsize: 15px;
	
	.fellow-spend-arrow-left, .fellow-spend-arrow-right {
	    display: block;
	    width: $arrowsize;
	    height: $arrowsize;
	    background-color: white;
	    border: 2px solid $black;
	    border-radius: 50%;
	    position: absolute;
	    top: 50%;
	    margin-top: (-$arrowsize / 2);
	    cursor: pointer;
	    
	    &:hover {
		background-color: $green;
		border: 2px solid $green;
	    }
	}
	
	.fellow-spend-arrow-left {
	    left: (-$arrowsize - 20px);
	    &:before {
		content: '';
		width: 0;
		height: 0;
		border-right: $arrowsymbol solid $black;
		border-top: $arrowsymbol solid transparent;
		border-bottom: $arrowsymbol solid transparent;
		margin-left: (-$arrowsymbol / 2);
		margin-top: (-$arrowsymbol);
		position: absolute;
		left: 45%;
		top: 50%;
	    }
	    &:after {
		content: '';
		width: 0;
		height: 0;
		border-right: $arrowsymbol solid white;
		border-top: $arrowsymbol solid transparent;
		border-bottom: $arrowsymbol solid transparent;
		margin-left: (-$arrowsymbol / 2);
		margin-top: (-$arrowsymbol);
		position: absolute;
		left: 50%;
		top: 50%;
	    }
	    
	    &:hover {
		&:after {
		    border-right: $arrowsymbol solid $green;
		}
		&:before {
		    border-right: $arrowsymbol solid white;
		}
	    }
	}
	
	.fellow-spend-arrow-right {
	    right: (-$arrowsize - 20px);
	    &:before {
		content: '';
		width: 0;
		height: 0;
		border-left: $arrowsymbol solid $black;
		border-top: $arrowsymbol solid transparent;
		border-bottom: $arrowsymbol solid transparent;
		margin-right: (-$arrowsymbol / 2);
		margin-top: (-$arrowsymbol);
		position: absolute;
		right: 45%;
		top: 50%;
	    }
	    &:after {
		content: '';
		width: 0;
		height: 0;
		border-left: $arrowsymbol solid white;
		border-top: $arrowsymbol solid transparent;
		border-bottom: $arrowsymbol solid transparent;
		margin-right: (-$arrowsymbol / 2);
		margin-top: (-$arrowsymbol);
		position: absolute;
		right: 50%;
		top: 50%;
	    }
	    
	    &:hover {
		&:after {
		    border-left: $arrowsymbol solid $green;
		}
		&:before {
		    border-left: $arrowsymbol solid white;
		}
	    }
	}
	
	.fellow-spend-dots {
	    margin: 10px auto;
	    text-align: center;
	    
	    .fellow-spend-dot {
		background-color: white;
		display: inline-block;
		width: $dotsize;
		height: $dotsize;
		border: 2px solid $black;
		border-radius: 50%;
		position: relative;
		margin: 0 10px;

		&:hover {
		    background-color: $green;
		    border: 2px solid $green;

		    .fellow-spend-dot-tooltip {
			opacity: 1;
			z-index: 50;
		    }
		}
		
		&.fellow-spend-dot-active {
		    background-color: $green;
		    border: 2px solid $green;
		}
		
		.fellow-spend-dot-tooltip {
		    opacity: 0;
		    transition: opacity 0.5s;
		    position: absolute;
		    top: -35px;
		    width: 200px;
		    margin-left: -98.5px;
		    background: white;
		    color: $black;
		    padding: 3px;
		    border: 2px solid $black;
		    border-radius: 3px;
		    pointer-events: none;
		    
		    &:before {
			content: '';
			position: absolute;
			width: 0;
			height: 0;
			border-top: 10px solid $black;
			border-left: 10px solid transparent;
			border-right: 10px solid transparent;
			top: 100%;
			margin-left: -5px;
			left: 50%;
		    }
		    
		    &:after {
			content: '';
			position: absolute;
			width: 0;
			height: 0;
			border-top: 10px solid white;
			border-left: 10px solid transparent;
			border-right: 10px solid transparent;
			top: 100%;
			margin-left: -5px;
			margin-top: -2px;
			left: 50%;
			
		    }
		}
	    }
	}
	
	$chartsize: 400px;
	
	.fellow-spend-chart {
	    position: absolute;
	    width: $chartsize;
	    height: $chartsize;
	    margin-left: (-$chartsize / 2);
	    left: 50%;
	    top: 50px;
	    
	    .fellow-spend-chart-photo {
		background-color: white;
		background-position: 50% 0%;
		background-size: cover;
		border: 4px solid white;
		border-radius: 50%;
		position: absolute;
		top: 20%;
		left: 20%;
		bottom: 20%;
		right: 20%;
	    }
	    
	    svg {
		.slice {
		    &.slice-people > path {
			fill: rgb(13,151,159);
		    }
		    &.slice-marketing > path {
			fill: rgb(240,110,37);
		    }
		    &.slice-administration > path {
			fill: rgb(240,110,37);
		    }
		    &.slice-software > path {
			fill: rgb(97,172,70);
		    }
		    &.slice-training > path {
			fill: rgb(186,122,209);
		    }
		    &.slice-infrastructure > path {
			fill: rgb(204,42,39);
		    }
		    &.slice-travel, &.slice-other > path {
			fill: rgb(251,185,22);
		    }
		    &.slice-legal, &.slice-office.space > path {
			fill: #7f195e;
		    }
		    
		    .label {
			font-family: 'Georgia', 'Merriweather', sans-serif;
			font-size: 6px;
			fill: white;
		    }
		}
	    }
	}
    }
}

